[package]
name = "health-check-operator"
version = "0.1.0"
authors = [""]
edition = "2024"

[dependencies]
kube = { version = "0.74", default-features = false, features = ["rustls-tls","runtime","derive","client"] }
kube-derive = "0.74.0"
k8s-openapi = { version = "0.15", default-features = false, features = ["v1_20"] }
schemars = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3.5"
tokio = { version = "1", features = ["full"] }
port_check = "0.3.0"
crossbeam = "0.8.4"
crossbeam-utils = "0.8.21"
